La til checkboks for felter

--- a/PRValidator/form.ui
+++ b/PRValidator/form.ui
@@ -55,6 +55,59 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="10,10,10,0">
+      <property name="leftMargin">
+       <number>20</number>
+      </property>
+      <property name="rightMargin">
+       <number>20</number>
+      </property>
+      <item>
+       <widget class="QCheckBox" name="checkKommune">
+        <property name="text">
+         <string>Valider kommune</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkDato">
+        <property name="text">
+         <string>Valider fødselsdato</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+        <property name="tristate">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkPersonnr">
+        <property name="text">
+         <string>Valider personnummer</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkNavn">
+        <property name="text">
+         <string>Valider navn</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <widget class="QTextEdit" name="text_result">
       <property name="enabled">
        <bool>true</bool>
